# tendr

./: LICENSE  README.md  pyproject.toml  renovate.json
.github/workflows/: python-app.yml
tendr/: tendr.py
