[tool.poetry]
name = "tendr"
version = "0.1.0"
description = "Report generation using Tend export data"
authors = ["Lucas Brendel <lucasbrendel@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.0"
dearpygui = "^1.10.1"
jupyter = "^1.0.0"


[tool.poetry.group.dev.dependencies]
rope = "^1.12.0"
autopep8 = "^2.0.4"
isort = "^5.13.2"
flake8 = "^7.0.0"
pydocstyle = "^6.3.0"
pylint = "^3.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
